# python-luqinhas

./: LICENSE  README.md  noxfile.py  pyproject.toml  pyproject.toml.save
src/python_luqinhas/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
