
[tool.poetry]
name = "python_luqinhas"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
authors = ["Luqinhas <lucascamargoekroth@gmail.com>"]
readme = "README.md"

homepage = "https://github.com/RukasuDesuu/python-luqinhas"
repository = "https://github.com/RukasuDesuu/python-luqinhas"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage = {extras = ["toml"], version = "^7.4.0"}
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptols]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.scripts]
python-luqinhas = "python_luqinhas.console:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["python_luqinhas"]

[tool.coverage.report]
show_missing = true
fail_under = 100
